--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         run: docker push registry.digitalocean.com/kenlo/digital-ocean-deploy:$(echo $GITHUB_SHA | head -c7)
 
       - name: Update deploy file
-        run: TAG = $(echo $GITHUB_SHA | head -c7) && sed -i "s/latest/$TAG/g" deployment.yml
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/kenlo/digital-ocean-deploy:'${TAG}'|' $GITHUB_WORKSPACE/deployment.yml
