--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "usuarios-api",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "directories": {
     "test": "test"
   },
