--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
     
       - name: Update SHA
-        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/app/_meta
+        run: mkdir -p $GITHUB_WORKSPACE/app/_meta && echo $GITHUB_SHA > $GITHUB_WORKSPACE/app/_meta/sha.txt
       
       - name: Build image
         run: docker build -t registry.digitalocean.com/kenlo/digital-ocean-deploy:$(echo $GITHUB_SHA | head -c7) .
