--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "mongoose": "^8.3.1",
-    "pm2": "^5.3.1"
+    "pm2": "^5.3.1",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
