--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.js",
-    "start": "nodemon ./src/app.js"
+    "start": "pm2 start ./src/app.js --name usuarios-api --watch",
   },
   "author": "Fernando Menezes",
   "license": "ISC",
@@ -18,8 +18,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "mongoose": "^8.3.1",
-    "pm2": "^5.3.1",
-    "nodemon": "^3.1.0"
+    "pm2": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
