--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.js",
-    "start": "pm2 start ./src/app.js --name usuarios-api --watch"
+    "start": "pm2 start ./src/app.js --name usuarios-api"
   },
   "author": "Fernando Menezes",
   "license": "ISC",
